added words! fuck what else do you want me to say?

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ li {
         <p><i>"Documenting on farm crop diversity so that we know what is being currently grown, how, by whom, for what purpose and how it is being threatened, represents an urgent and essential task for guiding the development of sound national conservation strategies based on the integration of ex situ and in situ/on-farm conservation methods."</i></p>
         <div class="quoteCitation">&mdash;Bioversity International, <a href="http://www.bioversityinternational.org/research/conservation/on_farm_conservation.html">On Farm Conservation</a></div>
 
-        <p>These are two major problems that need to be solved. They cannot be solved only through the use of technology. We shouldn&rsquo;t think as technology as the &ldquo;silver bullet&rdquo; that will fix all of our problems. There are other major political, cultural and geographical concerns that also need to be tackled before we can mark these issues as being fixed.</p>
+        <p>These are <b>two major problems</b> that need to be solved. They cannot be solved only through the use of technology. We shouldn&rsquo;t think as technology as the &ldquo;silver bullet&rdquo; that will fix all of our problems. There are other major political, cultural and geographical concerns that also need to be tackled before we can mark these issues as being fixed.</p>
 
     </div>
     <div class="columnRight" style="width:401px;">
