changed header bg

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ body {
   width: 100%;
   height: 239px;
   top: 0px;
-  background: #E2FFE0;
-  background: url(http://tutbase.com/tutorial/images/3d-easteregg/grass-background.png);
-  background-color: #00ecff;
+
+  background-color: #d6f1ff;
+  background-image: url(grass.png);
   background-position: bottom;
   background-size:200px;
   background-repeat: repeat-x;
@@ -505,10 +505,8 @@ li {
 
 <div class="intro">
     <div class="columnLeft">
-        <p><strong>Problem #1 - Information Management</strong></p>
-        <p><i>"On-farm conservation practices, so far, lack the approaches, guidelines, methods and tools that would assist farmers both in deriving livelihood benefits and in playing their ‘custodian’ role more effectively and efficiently."</i></p>
-        <p><strong>Problem #2 - Information Exchange</strong></p>
-        <p><i>"Documenting on farm crop diversity so that we know what is being currently grown, how, by whom, for what purpose and how it is being threatened, represents an urgent and essential task for guiding the development of sound national conservation strategies based on the integration of ex situ and in situ/on-farm conservation methods."</i></p>
+        <p><b>Problem #1 - Information Management</b> <i>"On-farm conservation practices, so far, lack the approaches, guidelines, methods and tools that would assist farmers both in deriving livelihood benefits and in playing their ‘custodian’ role more effectively and efficiently."</i></p>
+        <p><b>Problem #2 - Information Exchange</b> <i>"Documenting on farm crop diversity so that we know what is being currently grown, how, by whom, for what purpose and how it is being threatened, represents an urgent and essential task for guiding the development of sound national conservation strategies based on the integration of ex situ and in situ/on-farm conservation methods."</i></p>
         <div class="quoteCitation">&mdash;Bioversity International, <a href="http://www.bioversityinternational.org/research/conservation/on_farm_conservation.html">On Farm Conservation</a></div>
 
         <p>These are <b>two major problems</b> that need to be solved. They cannot be solved only through the use of technology. We shouldn&rsquo;t think as technology as the &ldquo;silver bullet&rdquo; that will fix all of our problems. There are other major political, cultural and geographical concerns that also need to be tackled before we can mark these issues as being fixed.</p>
